# ciphertool

./: .vimrc  AUTHORS  ChangeLog  GETTING_STARTED  INSTALL  Makefile  Makefile.in  README  README.md  Release.notes  Release.todo  TODO  TYPES  UI2.0  aclocal.m4  amsco.c  aristocrat.c  bacon.c  bazeries.c  bifid.c  bigbifid.c  cadenus.c  caesar.c  cipher.c  cipher.h  cipher.spec  cipher.spec.in  cipher.wsdl  cipherDebug.h  cipherInit.c  cipherUtil.c  cipher_soap.tcl  ciphertool.desktop  columnar.c  config.status  configure  configure.in  crithmCmd.c  crithmCmd.h  dictionary.c  (+78 more)
config/: mkinstalldirs  tcl.m4
data/: ja2004.tcl  sample_aristocrat.txt  sample_aristocrat_solution.txt  sample_bifid.txt  sample_bifid_solution.txt  sample_columnar.txt  sample_columnar_solution.txt  solve.aris  solve.aris.sol  solve.auto  solve.bacon  solve.bacon.bruteforce1  solve.bea  solve.cad  solve.cad2  solve.cad2.sol  solve.checker  solve.col  solve.col2  solve.fmorse  solve.grand  solve.grand.sol  solve.gron  solve.gron.sol  solve.homo  solve.inc  solve.keyphrase  solve.morbit  solve.mysz  solve.ni  solve.phil  solve.pollux  solve.porta  solve.porta2  solve.quag  solve.rail  solve.rail2  solve.rede  solve.slide  solve.swag  (+7 more)
doc/: csolve.html  csolve.tml  ctool.html  ctool.tml  dumproute.html  dumproute.tml  genboard.html  genboard.tml  gendocs.tcl  genscores.html  genscores.tml  gronsfeld.html  gronsfeld.tml  index.html  index.tml  k3search.html  k3search.tml  k4search.html  k4search.tml  key2col.html  key2col.tml  keysquaresearch.html  keysquaresearch.tml  lethist.html  lethist.tml  nicsolve.html  nicsolve.tml  patsearch.html  patsearch.tml  standardopts.tcl  template.tcl
doc/CipherUtil/: package.html  package.tml
doc/Crithm/: package.html  package.tml
doc/Dictionary/: package.html  package.tml
doc/Hillclimb/: package.html  package.tml
doc/Scoredata/: package.html  package.tml
doc/cipher/: amsco.html  amsco.tml  aristocrat.html  aristocrat.tml  baconian.html  baconian.tml  bazeries.html  bazeries.tml  beaufort.html  beaufort.tml  bifid.html  bifid.tml  bigbifid.html  bigbifid.tml  bigplayfair.html  bigplayfair.tml  cadenus.html  cadenus.tml  caesar.html  caesar.tml  cipher.html  cipher.tml  columnar.html  columnar.tml  digrafid.html  digrafid.tml  fmorse.html  fmorse.tml  foursquare.html  foursquare.tml  grandpre.html  grandpre.tml  grille.html  grille.tml  gromark.html  gromark.tml  homophonic.html  homophonic.tml  key.html  key.tml  (+42 more)
progs/: .#cmbifidsolve.1.3  .#hillclimb.1.28  .vimrc  autokeybrute  autokeysol  bazexample  bazsol  checkerboard2pat  cmbifidsolve  csolve  ctool  ctool.bat  digrafidsolve  doprog  dosolver  dumproute  fmorsekeysearch  genboard  geneticsearch  genscores  grandpresol  gromarksolve  hillclimb  hillclimbstats  histogram  homochart.pl  homotopat  ioc  k2msearch  k3board  k3board.tcl  k3search  k4search  kasiski  key2col  keysearch  keysquaresearch  kshunt  kshunt2  makedictionary  (+33 more)
tests/: all.tcl  amsco.test  aristocrat.test  baconian.test  bazeries.test  bifid.test  bigbifid.test  bigplayfair.test  cadenus.test  caesar.test  columnar.test  crithm.test  crithmCmd.test  defs.tcl  dictionary.test  digrafid.test  fmorse.test  foursquare.test  grandpre.test  grille.test  gromark.test  hillclimb.test  homophonic.test  keygen.test  morbit.test  morse.test  myszcowski.test  nicodemus.test  nitrans.test  phillips.test  playfair.test  pollux.test  quagmire.test  ragbaby.test  route.test  score.test  scoredata.test  stat.test  swagman.test  trifid.test  (+4 more)
